added draft inception block and embedding (??)

--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -98,13 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import torch as th"
+    "import torch as th\n",
+    "import torch.nn as nn"
    ]
   },
   {
@@ -169,24 +170,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Header has the following format\n",
-    "# index,Sea,Lge,Date,HT,AT,HS,AS,GD,WDL,Round,HT_H_Off_Rating,HT_H_Def_Rating,HT_A_Off_Rating,HT_A_Def_Rating,AT_H_Off_Rating,AT_H_Def_Rating,AT_A_Off_Rating,AT_A_Def_Rating,HT_EG,AT_EG\n",
-    "# where:\n",
+    "# inception block\n",
+    "class InceptionBlock(nn.Module):\n",
+    "    def __init__(self, in_channels, out_channels, num_kernel=4, init_weights=True):\n",
+    "        super(InceptionBlock, self).__init__()\n",
+    "        self.in_channels = in_channels\n",
+    "        self.out_channels = out_channels\n",
+    "        self.num_kernel = num_kernel\n",
+    "        kernels = []\n",
+    "        for i in range(1, num_kernel + 1):\n",
+    "            # kernels.append(nn.Conv2d(in_channels, out_channels // num_kernel, kernel_size=i * 2 + 1, padding=i))\n",
+    "            kernels.append(nn.Conv2d(in_channels, out_channels, kernel_size=i * 2 + 1, padding=i))\n",
+    "        self.kernels = nn.ModuleList(kernels)\n",
+    "        self.relu = nn.ReLU()\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        outputs = []\n",
+    "        for i in range(self.num_kernel):\n",
+    "            outputs.append(self.kernels[i](x))\n",
+    "        # outputs = th.stack(outputs, dim=1)\n",
+    "        outputs = th.cat(outputs, dim=1).mean(dim=1)\n",
+    "        return self.relu(outputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# needc an embedding layer for the teams before the feedforward network\n",
     "\n",
-    "# HT_H_Off_Rating - Home team home offensive rating\n",
-    "# HT_H_Def_Rating - Home team home defensive rating\n",
-    "# HT_A_Off_Rating - Home team away offensive rating\n",
-    "# HT_A_Def_Rating - Home team away defensive rating\n",
-    "# AT_H_Off_Rating - Away team home offensive rating\n",
-    "# AT_H_Def_Rating - Away team home defensive rating\n",
-    "# AT_A_Off_Rating - Away team away offensive rating\n",
-    "# AT_A_Def_Rating - Away team away defensive rating\n",
-    "# AT_EG - Away team expected goals\n",
-    "# HT_EG - Home team expected goals"
+    "class FootballPrediction(nn.Module):\n",
+    "    def __init__(self, num_teams, num_features, num_labels, num_inception_blocks=1):\n",
+    "        super(FootballPrediction, self).__init__()\n",
+    "        self.team_embedding = nn.Embedding(num_teams, 10)\n",
+    "        # inception block\n",
+    "        self.inception_block = [InceptionBlock(num_features + 10, 64) for _ in range(num_inception_blocks)]\n",
+    "\n",
+    "\n",
+    "        # would need a module that processes the sequential features\n",
+    "        # self.feedforward = nn.Sequential(\n",
+    "        #     nn.Linear(num_features + 10, 64),\n",
+    "        #     nn.ReLU(),\n",
+    "        #     nn.Linear(64, 64),\n",
+    "        #     nn.ReLU(),\n",
+    "        #     nn.Linear(64, num_labels)\n",
+    "        # )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # do we need to computer the berrar ratings here (??) or does the \n",
+    "        # input already contain the berrar ratings (??)\n",
+    "        # replace the team indexes with the embeddings\n",
+    "        home_team = self.team_embedding(x[:, 0].long())\n",
+    "        away_team = self.team_embedding(x[:, 1].long())\n",
+    "        x = th.cat([x[:, 2:], home_team, away_team], dim=1)\n",
+    "\n",
+    "        # pass through the inception block\n",
+    "        for block in self.inception_block:\n",
+    "            x = block(x)\n",
+    "\n",
+    "\n",
+    "        \n",
+    "        return self.feedforward(x)\n",
+    "    \n",
+    "\n",
+    "    def predict(self, x):\n",
+    "        # have to decide on what is the shape for the input\n",
+    "\n",
+    "        return self.forward(x)\n",
+    "    "
    ]
   }
  ],
