--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -194,7 +194,51 @@
     "            outputs.append(self.kernels[i](x))\n",
     "        # outputs = th.stack(outputs, dim=1)\n",
     "        outputs = th.cat(outputs, dim=1).mean(dim=1)\n",
-    "        return self.relu(outputs)"
+    "\n",
+    "        # do i want to add a relu here (??)\n",
+    "        return outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LSTMBlock(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, output_size, num_layers):\n",
+    "        super(LSTMBlock, self).__init__()\n",
+    "        self.lstm = nn.LSTM(input_size, hidden_size, num_layers, batch_first=True)\n",
+    "\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x, _ = self.lstm(x)\n",
+    "\n",
+    "        # do i want to ude the last layer only (??)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# configuration of the model\n",
+    "from dataclasses import dataclass\n",
+    "\n",
+    "@dataclass\n",
+    "class FootBallPredictionConfig:\n",
+    "    num_teams: int\n",
+    "    num_features: int\n",
+    "    num_labels: int\n",
+    "    num_inception_blocks: int\n",
+    "    num_lstm_layers: int\n",
+    "    hidden_size: int\n",
+    "    output_size: int\n",
+    "    num_epochs: int\n",
+    "    learning_rate: float\n",
+    "    batch_size: int"
    ]
   },
   {
@@ -206,13 +250,14 @@
     "# needc an embedding layer for the teams before the feedforward network\n",
     "\n",
     "class FootballPrediction(nn.Module):\n",
-    "    def __init__(self, num_teams, num_features, num_labels, num_inception_blocks=1):\n",
+    "    def __init__(self, config):\n",
     "        super(FootballPrediction, self).__init__()\n",
     "        self.team_embedding = nn.Embedding(num_teams, 10)\n",
     "        # inception block\n",
     "        self.inception_block = [InceptionBlock(num_features + 10, 64) for _ in range(num_inception_blocks)]\n",
     "\n",
-    "\n",
+    "        self.fc = nn.Linear(hidden_size, output_size)\n",
+    "        self.relu = nn.ReLU()\n",
     "        # would need a module that processes the sequential features\n",
     "        # self.feedforward = nn.Sequential(\n",
     "        #     nn.Linear(num_features + 10, 64),\n",
@@ -225,6 +270,7 @@
     "    def forward(self, x):\n",
     "        # do we need to computer the berrar ratings here (??) or does the \n",
     "        # input already contain the berrar ratings (??)\n",
+    "        \n",
     "        # replace the team indexes with the embeddings\n",
     "        home_team = self.team_embedding(x[:, 0].long())\n",
     "        away_team = self.team_embedding(x[:, 1].long())\n",
