convert the python notebook iunto scripts

--- a/dataset/convert_to_datasets.ipynb
+++ b/dataset/convert_to_datasets.ipynb
@@ -177,28 +177,28 @@
     }
    ],
    "source": [
-    "training_expected_labels = th.tensor(df_train[['HT_EG', 'AT_EG']].values, dtype=th.float32)\n",
+    "# training_expected_labels = th.tensor(df_train[['HT_EG', 'AT_EG']].values, dtype=th.float32)\n",
     "\n",
-    "total = 0\n",
-    "count = 0\n",
+    "# total = 0\n",
+    "# count = 0\n",
     "\n",
-    "for i in range(training_labels.shape[0]):\n",
-    "    home_score = training_labels[i][0]\n",
-    "    away_score = training_labels[i][1]\n",
-    "    home_expected_goals = training_expected_labels[i][0]\n",
-    "    away_expected_goals = training_expected_labels[i][1]\n",
-    "    if home_score > away_score:\n",
-    "        total += 1\n",
-    "        if home_expected_goals > away_expected_goals:\n",
-    "            count += 1\n",
-    "    elif home_score < away_score:\n",
-    "        total += 1\n",
-    "        if home_expected_goals < away_expected_goals:\n",
-    "            count += 1\n",
-    "    else:\n",
-    "        pass\n",
+    "# for i in range(training_labels.shape[0]):\n",
+    "#     home_score = training_labels[i][0]\n",
+    "#     away_score = training_labels[i][1]\n",
+    "#     home_expected_goals = training_expected_labels[i][0]\n",
+    "#     away_expected_goals = training_expected_labels[i][1]\n",
+    "#     if home_score > away_score:\n",
+    "#         total += 1\n",
+    "#         if home_expected_goals > away_expected_goals:\n",
+    "#             count += 1\n",
+    "#     elif home_score < away_score:\n",
+    "#         total += 1\n",
+    "#         if home_expected_goals < away_expected_goals:\n",
+    "#             count += 1\n",
+    "#     else:\n",
+    "#         pass\n",
     "\n",
-    "print(count/total)"
+    "# print(count/total)"
    ]
   },
   {
