--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,27 +93,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([3256, 10, 28])\n"
+      "torch.Size([3256, 1, 10, 28])\n",
+      "torch.Size([3256, 1, 2, 28])\n",
+      "torch.Size([813, 1, 10, 28])\n",
+      "torch.Size([813, 1, 2, 28])\n",
+      "torch.Size([50, 1, 10, 28])\n",
+      "torch.Size([50, 1, 2, 28])\n"
      ]
     }
    ],
    "source": [
-    "# fold the data for 2D convolution\n",
-    "time_frame = 28\n",
+    "\n",
+    "time_step = 28\n",
     "num_teams = len(team_to_idx)\n",
     "embedding_dim = 10\n",
     "in_channels = 1\n",
     "batch_size = 100\n",
     "\n",
     "for i in [train_data, train_labels, val_data, val_labels, testing_data, testing_labels]:\n",
-    "    i = i.unfold(0, time_frame, time_frame//2).unsqueeze(1)\n",
+    "    i = i.unfold(0, time_step, time_step//2).unsqueeze(1)\n",
+    "    print(i.shape)\n",
     "\n",
     "data_loader = th.utils.data.DataLoader(train_data, batch_size, shuffle=True)\n",
     "\n",
