--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,12 @@
     "\n",
     "import sys\n",
     "sys.path.append('../models/')\n",
-    "from models.inception1D import *"
+    "from models.lstm import LSTM, train_model, RPS_loss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([26361, 3])\n",
+      "torch.Size([4054, 3])\n",
+      "tensor([0, 0, 1])\n",
+      "tensor([1, 0, 0])\n",
+      "tensor([0, 0, 1])\n",
+      "tensor([0, 0, 1])\n",
+      "tensor([0, 1, 0])\n",
+      "tensor([1, 0, 0])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn.functional as F\n",
+    "\n",
+    "def one_hot_targets(targets):\n",
+    "    num_classes = th.max(targets).item() + 1\n",
+    "    return F.one_hot(targets, num_classes=num_classes)\n",
+    "\n",
+    "training_targets = one_hot_targets(training_targets)\n",
+    "test_targets = one_hot_targets(test_targets)\n",
+    "\n",
+    "print(training_targets.shape)\n",
+    "print(test_targets.shape)\n",
+    "\n",
+    "for i in range(3):\n",
+    "    print(training_targets[i])\n",
+    "    print(test_targets[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -144,8 +182,7 @@
       "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
       "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-      "         0.0000, 0.0000, 2.7000, 3.0000, 2.8000]])\n",
-      "Target:  A\n"
+      "         0.0000, 0.0000, 2.7000, 3.0000, 2.8000]])\n"
      ]
     }
    ],
@@ -156,12 +193,12 @@
     "print(\"Away team: \", idx_to_teams[training_away_teams_matches[index].item()])\n",
     "print(\"Features home: \", training_matches_features_home[index])\n",
     "print(\"Features away: \", training_matches_features_away[index])\n",
-    "print(\"Target: \", idx_to_result[training_targets[index].item()])\n"
+    "# print(\"Target: \", idx_to_result[training_targets[index].item()])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +225,7 @@
     "split_idx = int(len(training_home_teams_matches) * split)\n",
     "\n",
     "train_dataset = TensorDataset(training_home_teams_matches[:split_idx], training_away_teams_matches[:split_idx], training_matches_features_home[:split_idx], training_matches_features_away[:split_idx], training_targets[:split_idx])\n",
-    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=False) # true could cause lookahead\n",
     "\n",
     "val_dataset = TensorDataset(training_home_teams_matches[split_idx:], training_away_teams_matches[split_idx:], training_matches_features_home[split_idx:], training_matches_features_away[split_idx:], training_targets[split_idx:])\n",
     "val_loader = DataLoader(val_dataset, batch_size=32, shuffle=False)\n",
@@ -211,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +259,7 @@
       "torch.Size([32])\n",
       "torch.Size([32, 5, 14])\n",
       "torch.Size([32, 5, 14])\n",
-      "torch.Size([32])\n"
+      "torch.Size([32, 3])\n"
      ]
     }
    ],
@@ -235,11 +272,40 @@
     "    print(targets.shape)\n",
     "    break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50 Loss: 0.40241381525993347 Train Acc: 13.971168437025797 Val Acc: 13.757575757575758\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = LSTM(\n",
+    "            num_features=14, \n",
+    "            out_channels=7, \n",
+    "            hidden_size=32, \n",
+    "            num_heads=2, num_classes=3, bottleneck_dim = None)\n",
+    "\n",
+    "train_model(model, \n",
+    "criterion=RPS_loss,\n",
+    "# criterion= nn.CrossEntropyLoss(),\n",
+    "train_loader=train_loader, \n",
+    "val_loader=val_loader,\n",
+    "learning_rate=0.0005,\n",
+    "num_epochs=10)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3.11.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -253,7 +319,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
