Updated inception time block in transformer model

--- a/train.ipynb
+++ b/train.ipynb
@@ -339,7 +339,7 @@
     "\n",
     "train_model(model, \n",
     "criterion=RPS_loss,\n",
-    "# criterion= nn.CrossEntropyLoss(),\n",
+    "# criterion= nn.CrossEntropyLoss(ignore_index=0),\n",
     "train_loader=train_loader, \n",
     "val_loader=val_loader,\n",
     "learning_rate=0.1,\n",
